# backend_juicy_site

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  config.json  libtelegram_bot.rlib  sqlite3.exp  sqlite3.lib  test.db
DataBase/: test.db
html/: 404.html  index.html
src/: auth.rs  db_conn.rs  document_request.rs  main.rs  sqlite_conn.rs  user_request.rs
src/TelegramBot/: mod.rs
src/api/: api_cache.rs  db_conn.rs  document.rs  mod.rs  user.rs
src/auth/: mod.rs
src/db_conn/: mod.rs
src/sqlite_conn/: document.rs  user.rs
src/telegram_bot/: mod.rs
src/user_account/: auth.rs  mod.rs
