[package]
name = "juicy_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
reqwest = {}
serde = { version = "1.0", features = ["derive"] }
uuid = {features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]}


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = [ "sqlite_pool"]