[package]
name = "juicy_site"
version = "0.2.0"
edition = "2021"

#[build]
#target = "x86_64-unknown-linux-gnu"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "http2", "uuid"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
url = {version = "2.3.1"}
TgBot_api = {git="https://github.com/Rev1le/TgBot_api"}
once_cell = {version = "1.17.0"}

[dependencies.rusqlite]
features = ["bundled"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = [ "sqlite_pool"]